Mon Jul 16 23:20:24 2012  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_float_cmp): use FIXNUM_MIN and FIXNUM_MAX,
	  instead of LONG_MIN and LONG_MAX.

Mon Jul 16 22:50:41 2012  Tanaka Akira  <akr@fsij.org>

	* numeric.c (flo_to_s): use the exponential form if the integer part
	  is longer than or equal DBL_DIG.
	  [ruby-dev:45960] [ruby-trunk - Bug #6741]

Mon Jul 16 22:01:00 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/readline/readline.c: fixed docs. [Bug #6740][ruby-core:46501]
	  patched by Nobuhiro IMAI.

Mon Jul 16 19:24:01 2012  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_float_eq): new function.
	  (rb_big_eq): use rb_integer_float_eq.

	* internal.h (rb_integer_float_eq): declared.

	* numeric.c (flo_eq): use rb_integer_float_eq.
	  (fix_equal): ditto.

Mon Jul 16 19:02:31 2012  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_float_cmp): rename a local variable.

Mon Jul 16 18:40:26 2012  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_float_cmp): renamed from rb_big_float_cmp.

	* internal.h: follow the above change.

	* numeric.c: ditto.

Mon Jul 16 17:57:54 2012  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_float_cmp): compare an integer and float precisely.
	  [ruby-core:31376] [Bug #3589] reported by Tomasz Wegrzanowski.

Mon Jul 16 17:29:45 2012  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_float_cmp): support fixnum for argument x.

	* numeric.c (fix_equal): use rb_big_float_cmp.
	  (fix_cmp): ditto.
	  (fix_gt): ditto.
	  (fix_ge): ditto.
	  (fix_lt): ditto.
	  (fix_le): ditto.
	  (flo_eq): ditto.
	  (flo_cmp): use rb_big_float_cmp for fixnum argument.
	  (flo_gt): ditto.
	  (flo_ge): ditto.
	  (flo_lt): ditto.
	  (flo_le): ditto.

Mon Jul 16 17:05:53 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* test/fileutils/test_fileutils.rb: add test for FileUtils#uptodate?

Mon Jul 16 16:56:12 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/fileutils.rb (FileUtils.uptodate?): remove useless parameter.